--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>タスク新規作成ページ</h1>
 <%= form_with(model: @task, local: true) do |f|  %>
-<%= f.label :content, 'メッセージ' %>
+<%= f.label :content, 'タスク' %>
 <%= f.text_field :content %>
 <%= f.submit '投稿' %>
 <% end %>
