--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -8,6 +8,8 @@
     </ul>
 </div>
 <% end %>
+<%= f.label :status, 'ステータス' %>
+<%= f.text_field :status %>
 <%= f.label :content, 'タスク' %>
 <%= f.text_field :content %>
 <%= f.submit '投稿' %>
