--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <h1>タスク一覧</h1>
 <ul><% @tasks.each do |task| %>
-    <li><%= link_to task.id, task_path(task) %>:<%= task.content %></li>
+    <li><%= link_to task.id, task_path(task) %>:<%= task.status %>&gt;<%= task.content %></li>
 <% end %></ul>
 
 <%= link_to '新規タスクの作成', new_task_path %>
