--- a/app/views/layouts/_flash_tasks.html.erb
+++ b/app/views/layouts/_flash_tasks.html.erb
@@ -1,3 +1,4 @@
 <% flash.each do |task_type, task| %>
-<div><%= task %></div>
+    <div class="alert alert-<%= message_type %>">
+    <%= task %></div>
 <% end %>
