--- a/app/views/layouts/_flash_tasks.html.erb
+++ b/app/views/layouts/_flash_tasks.html.erb
@@ -1,4 +1,4 @@
 <% flash.each do |task_type, task| %>
-    <div class="alert alert-<%= message_type %>">
+    <div class="alert alert-<%= task_type %>">
     <%= task %></div>
 <% end %>
