--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item"><%= link_to  '新規メッセージの投稿', new_task_path, class: 'nav-link' %></li>
-        <li class="nav-item"><a href="#" class="nav-link">Sign up</a></li>
+        <li class="nav-item"><%= link_to 'Sign up', signup_path, class: 'nav-link' %></li>
         <li class="nav-item"><a href="#" class="nav-link">Log in</a></li>
       </ul>
     </div>
