--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,9 +9,13 @@
     <!-- メニュー項目 -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><%= link_to  '新規メッセージの投稿', new_task_path, class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to 'Sign up', signup_path, class: 'nav-link' %></li>
-        <li class="nav-item"><a href="#" class="nav-link">Log in</a></li>
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to '新規メッセージの投稿', new_task_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Logout', logout_path, method: :delete %></li>
+        <% else %>  
+          <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
