--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
+<% if logged_in? %>
 <h1>タスク一覧</h1>
 <% if @tasks.any? %>
     <table class="table table-striped">
@@ -25,3 +26,6 @@
     <% end %>
 
 <%= link_to '新規タスクの作成', new_task_path, class: "btn btn-primary" %>
+<% else %>
+   
+<% end %>
