--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
                     <td><%= task.content %></td>
                 </tr>
             <% end %>
-        </tboby>
+        </tbody>
     </table>
     <div>
         <%= paginate @tasks %>
