--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,5 @@
+<% if logged_in? %>
+
 <h1>id:<%= @task.id %>のタスク詳細ページ</h1>
 
 <table class="table table-bordered">
@@ -18,3 +20,6 @@
 <%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-light' %>
 
 <%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？'}, class: 'btn btn-danger' %>
+<% else %>
+
+<% end %>
