--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,8 +10,8 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <% if logged_in? %>
-          <li class="nav-item"><%= link_to '新規メッセージの投稿', new_task_path, class: 'nav-link' %></li>
-          <li class="nav-item"><%= link_to 'Logout', logout_path, method: :delete %></li>
+          <li class="nav-item"><%= link_to '新規タスクの作成', new_task_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link' %></li>
         <% else %>  
           <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
